# storefront

./: .dockerignore  .gitignore  Makefile  Pipfile  local.yml  pyproject.toml  requirements.txt
.env_example/.local/: .postgres
app/: settings.py  urls.py
config/: settings.py  urls.py
custom_store/: admin.py  apps.py
docker/django/: Dockerfile  start
docker/mock-db/: Dockerfile
docker/mock-db/mock/: execute_sql.py  mock_customer.sql  mock_db  seed.sql  seed_db.sql
likes/: models.py
likes/migrations/: 0001_initial.py
playground/: views.py
playground/templates/: hello.html
store/: admin.py  constants.py  filters.py  models.py  pagination.py  serializers.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_alter_collection_options.py  0002_change_postcode_to_zip_code_in_Address.py  0003_alter_customer_options_alter_product_options.py  0004_alter_product_inventory_alter_product_unit_price.py  0006_auto_20221107_1600.py  0007_alter_orderitem_product_alter_product_collection.py  0008_review.py  0009_rename_name_review_customer.py  0010_alter_cart_id.py  0011_alter_cartitem_cart.py  0012_alter_cartitem_unique_together.py
storefront/: settings.py  urls.py
tags/: admin.py  models.py
tags/migrations/: 0001_initial.py
