[tool.poetry]
name = "storefront"
version = "0.1.0"
description = "An API service for an E-Commerce Web Application"
authors = ["Paul Onyekwelu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
django-debug-toolbar = "^4.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
